--- a/t3-react/public/globals.css
+++ b/t3-react/public/globals.css
@@ -74,6 +74,8 @@ button:hover, .square:hover {
     font-size: 15px;
 }
 
+/* Top Panel styles */
+
 @keyframes top-panel-text-animation {
     0% {
         opacity: 0;
@@ -115,46 +117,6 @@ button:hover, .square:hover {
     animation: 0.6s ease-in-out top-panel-text-animation;
 }
 
-.menu {
-    position: relative;
-}
-
-.menu button {
-    color: white;
-    background-color: #203139;
-}
-
-.menu-btn {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 10px;
-}
-
-.menu-btn:focus,
-.menu-btn:hover {
-    background-color: rgba(211, 211, 211, 0.07);
-}
-
-.dropdown {
-    top: 55px;
-    right: 0;
-    position: absolute;
-    padding: 9px 15px;
-    background-color: #203139;
-    border-radius: 2px !important;
-}
-
-.dropdown button {
-    padding: 10px;
-}
-
-.dropdown button:hover {
-    text-decoration: underline;
-}
-
 .square {
     background-color: var(--gray);
     display: flex;
@@ -165,42 +127,6 @@ button:hover, .square:hover {
 
 .score {
     color: var(--dark-gray);
-}
-
-/* footer styles */
-footer {
-    color: white;
-}
-
-footer a {
-    color: var(--yellow);
-}
-
-footer p {
-    padding: 10px 0;
-}
-
-/* modal styles */
-.overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-.modal {
-    background-color: #2a4544;
-    width: 300px;
-    height: 140px;
-    border-radius: 25px;
-    gap: 20px;
-    color: white;
-}
-
-.modal button {
-    background-color: var(--turquoise);
-    padding: 10px 20px;
-    border-radius: 5px;
 }
 
 /* responsive styles */
